sandbox/grubert/test/images.txt.tex.ref
\documentclass[a4paper]{article}
% generated by Docutils <http://docutils.sourceforge.net/>
\usepackage{fixltx2e} % LaTeX patches, \textsubscript
\usepackage{cmap} % fix search and cut-and-paste in Acrobat
\usepackage{ifthen}
\usepackage[T1]{fontenc}
\usepackage[utf8]{inputenc}
\usepackage{color}
\usepackage{float} % float configuration
\floatplacement{figure}{H} % place figures here definitely
\usepackage{graphicx}
\setcounter{secnumdepth}{0}

%%% Custom LaTeX preamble
% PDF Standard Fonts
\usepackage{mathptmx} % Times
\usepackage[scaled=.90]{helvet}
\usepackage{courier}

%%% User specified packages and stylesheets

%%% Fallback definitions for Docutils-specific commands

% admonition (specially marked topic)
\providecommand{\DUadmonition}[2][class-arg]{%
  % try \DUadmonition#1{#2}:
  \ifcsname DUadmonition#1\endcsname%
    \csname DUadmonition#1\endcsname{#2}%
  \else
    \begin{center}
      \fbox{\parbox{0.9\linewidth}{#2}}
    \end{center}
  \fi
}

% title for topics, admonitions, unsupported section levels, and sidebar
\providecommand*{\DUtitle}[2][class-arg]{%
  % call \DUtitle#1{#2} if it exists:
  \ifcsname DUtitle#1\endcsname%
    \csname DUtitle#1\endcsname{#2}%
  \else
    \smallskip\noindent\textbf{#2}\smallskip%
  \fi
}

% hyperlinks:
\ifthenelse{\isundefined{\hypersetup}}{
  \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
  \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
}{}
\hypersetup{
  pdftitle={Testing image attributes},
}

%%% Title Data
\title{\phantomsection%
  Testing image attributes%
  \label{testing-image-attributes}}
\author{}
\date{}

%%% Body
\begin{document}
\maketitle

the unscaled image

\includegraphics{biohazard.png}

scaled 200

\includegraphics[scale=2.000000]{biohazard.png}

center and scale

\noindent\makebox[\linewidth][c]{\includegraphics[scale=2.000000]{biohazard.png}}

an image with a web target
\href{http://www.debian.org}{\includegraphics{debian.png}}

% 

and for figure too

\begin{figure} % align = "right"
\noindent\makebox[\linewidth][c]{\includegraphics[width=5cm]{biohazard.png}}\end{figure}

figure and scale

\begin{figure} % align = "left"
\noindent\makebox[\linewidth][c]{\includegraphics[scale=3.000000]{biohazard.png}}\end{figure}


\section{unsupported things%
  \label{unsupported-things}%
}

\DUadmonition[system-message]{
\DUtitle[system-message]{system-message}


{\color{red}ERROR/3} in \texttt{test/images.txt}, line~42

Error in \textquotedbl{}image\textquotedbl{} directive:
unknown option: \textquotedbl{}rotate\textquotedbl{}.
%
\begin{quote}{\ttfamily \raggedright \noindent
..~image::~biohazard.png\\
~~~:rotate:~90\\

}
\end{quote}
backrefs: }

how to set a label

\includegraphics{biohazard.png}
\phantomsection\label{classy-pic}

\DUadmonition[system-message]{
\DUtitle[system-message]{system-message}


{\color{red}ERROR/3} in \texttt{test/images.txt}, line~50

Error in \textquotedbl{}figure\textquotedbl{} directive:
unknown option: \textquotedbl{}label\textquotedbl{}.
%
\begin{quote}{\ttfamily \raggedright \noindent
..~figure::~biohazard.png\\
~~~:label:~classy~pic\\
~\\

}
\end{quote}
backrefs: }

\end{document}
